# labwork-docker

./: .gitignore  FriendlyArgumentParser.py  README.md  build-docker  run-testcases
.github/workflows/: docker-publish.yml
docker/: Dockerfile  labwork-execute
docker/gradle/: settings.gradle.kts
docker/rust/: Cargo.toml
labwork/: Dockerfile  build  my_solution.py  run
labwork-helpers/: OracleCache.py
