[package]
name = "vendorhelper"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
getopts = "0.2"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8"
num = "0.4"
rand = "0.9"
thiserror = "2.0"
env_logger = "0.11"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
rug = { version = "1.28.0", features = ["integer"] }
